--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ html {
 .email {
     font-size: 18px;
     font-family: 'Major Mono Display', monospace;
+    display: inline;
 }
 
 .gallery-button {
@@ -85,8 +86,9 @@ html {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border: 1px solid black;
+    padding-bottom: 4px;
+    padding-top: 4px;
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 20px;
@@ -129,12 +131,26 @@ html {
 
 .image {
     width: 12%;
+    transition: 1s;
 }
 
-.image :hover {
+.image:hover {
+    transform: scale(2);
+    transition: 1s;
+    cursor: pointer;
+    box-shadow: 0px 0px 23px 8px rgba(27,168,27,0.75);
+}
+
+.copybutton {
+    padding: 5px;
+    margin-left: 5px;
+    border: green 1px solid;
+    border-radius: 5px;
+    display: inline;
+}
+.copybutton:hover {
     cursor: pointer;
 }
-
 
 @media (max-width:700px){
     .header {
@@ -159,8 +175,7 @@ html {
         display: flex;
         flex-wrap: wrap;
         padding: 0 4px;
-        border-left: 1px solid black;
-        border-right: 1px solid black;
+        border: 1px solid black;
         margin-left: 25px;
         margin-right: 25px;
         margin-bottom: 20px;
@@ -181,5 +196,14 @@ html {
     .email {
         font-size: 13px;
         font-family: 'Major Mono Display', monospace;
+    }
+    .gallery-button {
+        display: none;
+    }
+    .contact-button {
+        display: none;
+    }
+    .instagram {
+        display: none;
     }
 }
