--- a/style.css
+++ b/style.css
@@ -70,6 +70,14 @@ html {
     border: 0px;
 }
 
+.contacts {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 0px;
+    background: none;
+    border: 0px;
+}
+
 .gallery-button :hover {
     cursor: pointer;
 }
